minor fixes to text-align

--- a/client/src/home/home.scss
+++ b/client/src/home/home.scss
@@ -12,6 +12,7 @@ $smallMargin: 10px;
   background-color: $primaryColor;
   color: $textLightColor;
   border-bottom: $smallMargin solid $highlightColor;
+  text-align: center;
 
   & > h1 {
     border-bottom: none !important;
@@ -29,7 +30,6 @@ $smallMargin: 10px;
 
 .intro-box > .container > h1 {
   border: none;
-  text-align: center;
   font-size: 55px;
   font-weight: $lightFontWeight;
   margin-top: 25px;
@@ -45,8 +45,6 @@ $smallMargin: 10px;
 
 .intro-box > .container > h3 {
   font-weight: $lightFontWeight;
-  margin-top: 0px;
-  text-align: center;
   font-size: 20px;
 }
 
